# eTool

./: README.md  README.zh-CN.md  babel.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: main.yml
src/: App.css  App.tsx  main.tsx
src-python/: screen_capture.py
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: invokes.rs  main.rs  screenshot.rs  setup.rs  system_tary.rs
src-tauri/src/invokes/: screenshot.rs
src/components/: MediaDevice.tsx
src/composables/: useWebviewWindow.ts
src/hooks/: useDark.ts
src/pages/ocr/: index.tsx  styled.ts
src/pages/webview/: index.tsx  method.ts
src/registers/: constants.ts
src/registers/screenshot/: constants.ts  index.ts
src/router/: index.tsx
src/store/: index.ts
src/styles/: style.css
src/utils/: constants.ts  index.ts  registers.ts
