[package]
name = "e_tool"
version = "0.0.1"
description = "This is an app that recognizes text in pictures. The application is developed using Tauri, Vite, React, TypeScript."
authors = ["Quincy Qiu"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = ["api-all", "macos-private-api", "system-tray"] }
screenshots = "0.7.2"
clipboard = "0.5.0"
image = "0.25.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
